--- a/Servers/package.json
+++ b/Servers/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "express": "^4.21.0",
     "nodemon": "^3.1.7",
