--- a/Servers/package.json
+++ b/Servers/package.json
@@ -15,5 +15,8 @@
     "express": "^4.21.0",
     "nodemon": "^3.1.7",
     "pg": "^8.13.0"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21"
   }
 }
