--- a/Servers/package.json
+++ b/Servers/package.json
@@ -4,19 +4,21 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "npm run build && node dist/index.js",
+    "build": "tsc"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "express": "^4.21.0",
     "nodemon": "^3.1.7",
-    "pg": "^8.13.0"
+    "pg": "^8.13.0",
+    "typescript": "^5.6.2"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21"
+    "@types/express": "^4.17.21",
+    "@types/node": "^22.7.1"
   }
 }
