--- a/Clients/package.json
+++ b/Clients/package.json
@@ -21,19 +21,22 @@
     "@reduxjs/toolkit": "^2.2.7",
     "@svgr/rollup": "^8.1.0",
     "dayjs": "^1.11.13",
+    "libphonenumber-js": "^1.11.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
-    "styled-components": "^6.1.13"
+    "styled-components": "^6.1.13",
+    "validator": "^13.12.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
     "@svgr/webpack": "^8.1.0",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
+    "@types/validator": "^13.12.2",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "eslint": "^9.9.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
