--- a/Servers/package.json
+++ b/Servers/package.json
@@ -4,20 +4,25 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm run build && node dist/index.js",
+    "start": "nodemon index.js",
+    "dist": "npm run build && node dist/index.js",
     "build": "tsc"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "nodemon": "^3.1.7",
     "pg": "^8.13.0",
     "typescript": "^5.6.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^22.7.1"
   }
