--- a/Servers/package.json
+++ b/Servers/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js",
+    "start": "nodemon dist/index.js",
     "dist": "npm run build && node dist/index.js",
     "build": "tsc"
   },
@@ -18,12 +18,14 @@
     "express": "^4.21.0",
     "nodemon": "^3.1.7",
     "pg": "^8.13.0",
+    "pg-pool": "^3.7.0",
     "typescript": "^5.6.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/node": "^22.7.1"
+    "@types/node": "^22.7.1",
+    "@types/pg": "^8.11.10"
   }
 }
