--- a/Servers/package.json
+++ b/Servers/package.json
@@ -12,11 +12,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@types/passport-jwt": "^4.0.1",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
+    "passport-jwt": "^4.0.1",
     "pg": "^8.13.0",
     "pg-pool": "^3.7.0",
     "typescript": "^5.6.2"
