Created Popup component and Create Popup Form component

--- a/Clients/package.json
+++ b/Clients/package.json
@@ -21,6 +21,7 @@
     "@reduxjs/toolkit": "^2.2.7",
     "@svgr/rollup": "^8.1.0",
     "dayjs": "^1.11.13",
+    "material-ui-popup-state": "^5.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
