--- a/Clients/package.json
+++ b/Clients/package.json
@@ -22,7 +22,9 @@
     "@svgr/rollup": "^8.1.0",
     "@tiptap/react": "^2.8.0",
     "@tiptap/starter-kit": "^2.8.0",
+    "axios": "^1.7.7",
     "dayjs": "^1.11.13",
+    "dotenv": "^16.4.5",
     "libphonenumber-js": "^1.11.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
