--- a/Servers/.example.env
+++ b/Servers/.example.env
@@ -2,7 +2,7 @@ PORT=3000
 DB_HOST=localhost
 DB_USER=postgres
 DB_PORT=5432
-DB_PASSWORD=1377
+DB_PASSWORD=password
 DB_NAME=verifywise
 
 MOCK_DATA_ON=true
