--- a/Servers/package.json
+++ b/Servers/package.json
@@ -21,7 +21,8 @@
     "passport-jwt": "^4.0.1",
     "pg": "^8.13.0",
     "pg-pool": "^3.7.0",
-    "typescript": "^5.6.2"
+    "typescript": "^5.6.2",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -30,7 +31,11 @@
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.7.5",
     "@types/pg": "^8.11.10",
+    "@types/swagger-ui-express": "^4.1.6",
+    "@types/yamljs": "^0.2.34",
     "nodemon": "^3.1.7",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "ts-node": "^10.9.2",
     "tsc-watch": "^6.2.0"
   }
