init file upload component w Uppy and injected in playground page

--- a/Clients/package.json
+++ b/Clients/package.json
@@ -22,6 +22,11 @@
     "@svgr/rollup": "^8.1.0",
     "@tiptap/react": "^2.8.0",
     "@tiptap/starter-kit": "^2.8.0",
+    "@uppy/core": "^4.2.3",
+    "@uppy/dashboard": "^4.1.2",
+    "@uppy/drag-drop": "^4.0.4",
+    "@uppy/react": "^4.0.3",
+    "@uppy/xhr-upload": "^4.2.2",
     "axios": "^1.7.7",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
