--- a/Servers/package.json
+++ b/Servers/package.json
@@ -20,6 +20,7 @@
     "express": "^4.21.1",
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "passport-jwt": "^4.0.1",
     "pg": "^8.13.0",
     "pg-pool": "^3.7.0",
