--- a/Clients/package.json
+++ b/Clients/package.json
@@ -25,7 +25,9 @@
     "@uppy/core": "^4.2.3",
     "@uppy/dashboard": "^4.1.2",
     "@uppy/drag-drop": "^4.0.4",
+    "@uppy/drop-target": "^3.0.1",
     "@uppy/file-input": "^4.0.3",
+    "@uppy/golden-retriever": "^4.0.1",
     "@uppy/progress-bar": "^4.0.1",
     "@uppy/react": "^4.0.3",
     "@uppy/xhr-upload": "^4.2.2",
