--- a/Clients/package.json
+++ b/Clients/package.json
@@ -38,6 +38,7 @@
     "material-ui-popup-state": "^5.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-joyride": "^2.9.3",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "redux": "^5.0.1",
