fixed the project create fields

--- a/Servers/docker-compose.yml
+++ b/Servers/docker-compose.yml
@@ -16,7 +16,8 @@ services:
   backend:
     depends_on:
       - postgresdb
-    image: pharsh4585/verifywise-backend:latest
+    # image: pharsh4585/verifywise-backend:latest
+    build: .
     env_file:
       - ./.env
     ports:
