--- a/Servers/docker-compose.yml
+++ b/Servers/docker-compose.yml
@@ -16,8 +16,7 @@ services:
   backend:
     depends_on:
       - postgresdb
-    # image: pharsh4585/verifywise-backend:latest
-    build: .
+    image: pharsh4585/verifywise-backend:latest
     env_file:
       - ./.env
     ports:
