added code change to use dynamic URL for backend api calls in frontend

--- a/Clients/Dockerfile
+++ b/Clients/Dockerfile
@@ -12,6 +12,7 @@ RUN npm install
 
 # Step 5: Copy the rest of the application files
 COPY . .
+# COPY startup.sh /app/startup.sh
 
 # Step 6: Build the application
 RUN npm run build-dev
@@ -25,5 +26,14 @@ COPY --from=build /app/dist /usr/share/nginx/html
 # Step 9: Expose port 80
 EXPOSE 80
 
-# Step 10: Start NGINX server
+# Step 10: Copy the startup script into the container (before chmod)
+# COPY --from=build /app/startup.sh /usr/local/bin/startup.sh
+
+# Step 11: Make the script executable
+# RUN chmod +x /usr/local/bin/startup.sh
+
+# Step 12: Set the entry point to the startup script
+# ENTRYPOINT ["/usr/local/bin/startup.sh"]
+
+# Step 13: Start NGINX server
 CMD ["nginx", "-g", "daemon off;"]
