--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+# NOTE: Please do not change the BACKEND_PORT
 BACKEND_PORT=3000
 FRONTEND_PORT=8080
 DB_HOST=localhost
@@ -11,4 +12,4 @@ MOCK_DATA_ON=false
 JWT_SECRET=verifywise
 
 # backend app url
-VITE_APP_API_HOST=http://localhost
+# VITE_APP_API_HOST=http://localhost
