added dev and prod environments

--- a/.env
+++ b/.env
@@ -1,15 +1,27 @@
+# Common Variables
 # NOTE: Please do not change the BACKEND_PORT
 BACKEND_PORT=3000
 FRONTEND_PORT=8080
-DB_HOST=localhost
-DB_USER=postgres
+
+# Database
 DB_PORT=5432
 LOCAL_DB_PORT=5433
-DB_PASSWORD=test
+DB_HOST=localhost
 DB_NAME=verifywise
 
+# ---------- DEV
+ENVIRONMENT=development
+DB_USER=verifywise
+DB_PASSWORD=test
+
+# ---------- PROD
+# ENVIRONMENT=production
+# DB_USER=verifywise-prod
+# DB_PASSWORD=verifywise
+
+# Backend Settings
 MOCK_DATA_ON=false
 JWT_SECRET=verifywise
 
-# backend app url
+# Backend API URL
 # VITE_APP_API_HOST=http://localhost
