--- a/.env
+++ b/.env
@@ -13,3 +13,7 @@ JWT_SECRET=verifywise
 
 # backend app url
 # VITE_APP_API_HOST=http://localhost
+
+EMAIL_ID=your-email@gmail.com
+# Your password from: https://myaccount.google.com/apppasswords
+EMAIL_PASSWORD="aaaa bbbb cccc dddd"
