--- a/Clients/Dockerfile
+++ b/Clients/Dockerfile
@@ -12,7 +12,6 @@ RUN npm install
 
 # Step 5: Copy the rest of the application files
 COPY . .
-# COPY startup.sh /app/startup.sh
 
 # Step 6: Build the application
 RUN npm run build-dev
@@ -23,17 +22,11 @@ FROM nginx:1.25-alpine
 # Step 8: Copy the build output to NGINX's default public directory
 COPY --from=build /app/dist /usr/share/nginx/html
 
-# Step 9: Expose port 80
+# Step 9: Copy the custom NGINX configuration
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+
+# Step 10: Expose port 80
 EXPOSE 80
 
-# Step 10: Copy the startup script into the container (before chmod)
-# COPY --from=build /app/startup.sh /usr/local/bin/startup.sh
-
-# Step 11: Make the script executable
-# RUN chmod +x /usr/local/bin/startup.sh
-
-# Step 12: Set the entry point to the startup script
-# ENTRYPOINT ["/usr/local/bin/startup.sh"]
-
-# Step 13: Start NGINX server
+# Step 11: Start NGINX server
 CMD ["nginx", "-g", "daemon off;"]
