--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -28,7 +28,7 @@ jobs:
         context: ./Clients
         platforms: linux/amd64,linux/arm64
         push: true
-        tags: ${{ secrets.DOCKER_HUB_USERNAME }}/clients:latest
+        tags: ${{ secrets.DOCKER_HUB_USERNAME }}/verifywise-frontend:latest
 
     - name: Build and push Servers image
       uses: docker/build-push-action@v4
@@ -36,4 +36,4 @@ jobs:
         context: ./Servers
         platforms: linux/amd64,linux/arm64
         push: true
-        tags: ${{ secrets.DOCKER_HUB_USERNAME }}/servers:latest
+        tags: ${{ secrets.DOCKER_HUB_USERNAME }}/verifywise-backend:latest
