--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,6 +17,9 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
+      - name: Debug Docker Hub Username
+        run: echo "Docker Hub Username: ${{ secrets.DOCKER_HUB_USERNAME }}"
+
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
@@ -29,7 +32,7 @@ jobs:
           context: ./Clients
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/verifywise-frontend:latest
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/verifywise-frontend:testing
 
       - name: Build and push Servers image
         uses: docker/build-push-action@v4
@@ -37,4 +40,4 @@ jobs:
           context: ./Servers
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/verifywise-backend:latest
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/verifywise-backend:testing
