--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,8 +17,21 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Debug Docker Hub Username
-        run: echo "Docker Hub Username: ${{ secrets.DOCKER_HUB_USERNAME }}"
+      - name: Debug Secret Access
+        run: |
+          if [ -z "${{ secrets.DOCKER_HUB_USERNAME }}" ]; then
+            echo "❌ DOCKER_HUB_USERNAME is NOT set!"
+            exit 1
+          else
+            echo "✅ DOCKER_HUB_USERNAME is set!"
+          fi
+
+          if [ -z "${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}" ]; then
+            echo "❌ DOCKER_HUB_ACCESS_TOKEN is NOT set!"
+            exit 1
+          else
+            echo "✅ DOCKER_HUB_ACCESS_TOKEN is set!"
+          fi
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
