--- a/.env
+++ b/.env
@@ -2,10 +2,10 @@
 BACKEND_PORT=3000
 FRONTEND_PORT=8080
 DB_HOST=localhost
-DB_USER=postgres
+DB_USER=myuser
 DB_PORT=5432
 LOCAL_DB_PORT=5433
-DB_PASSWORD=test
+DB_PASSWORD=rootroot
 DB_NAME=verifywise
 
 MOCK_DATA_ON=false
@@ -14,6 +14,6 @@ JWT_SECRET=verifywise
 # backend app url
 # VITE_APP_API_HOST=http://localhost
 
-EMAIL_ID=your-email@gmail.com
+EMAIL_ID=srwa.rashidpoor.1993@@gmail.com
 # Your password from: https://myaccount.google.com/apppasswords
 EMAIL_PASSWORD="aaaa bbbb cccc dddd"
