--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,9 +16,8 @@ services:
   backend:
     depends_on:
       - postgresdb
-    # image: pharsh4585/verifywise-backend:latest
-    # pull_policy: always
-    build: ./Servers
+    image: pharsh4585/verifywise-backend:latest
+    pull_policy: always
     env_file:
       - ./.env
     ports:
@@ -37,9 +36,8 @@ services:
   frontend:
     depends_on:
       - backend
-    # image: pharsh4585/verifywise-frontend:latest
-    # pull_policy: always
-    build: ./Clients
+    image: pharsh4585/verifywise-frontend:latest
+    pull_policy: always
     env_file:
       - ./.env
     ports:
