--- a/Servers/package.json
+++ b/Servers/package.json
@@ -46,6 +46,7 @@
     "@types/yamljs": "^0.2.34",
     "nodemon": "^3.1.7",
     "npm-run-all": "^4.1.5",
+    "sequelize-cli": "^6.6.2",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "ts-node": "^10.9.2",
