--- a/Servers/tsconfig.json
+++ b/Servers/tsconfig.json
@@ -43,7 +43,7 @@
     // "allowArbitraryExtensions": true,                 /* Enable importing files with any extension, provided a declaration file is present. */
     // "noResolve": true,                                /* Disallow 'import's, 'require's or '<reference>'s from expanding the number of files TypeScript should add to a project. */
     /* JavaScript Support */
-    // "allowJs": true,                                  /* Allow JavaScript files to be a part of your program. Use the 'checkJS' option to get errors from these files. */
+    "allowJs": true,                                  /* Allow JavaScript files to be a part of your program. Use the 'checkJS' option to get errors from these files. */
     // "checkJs": true,                                  /* Enable error reporting in type-checked JavaScript files. */
     // "maxNodeModuleJsDepth": 1,                        /* Specify the maximum folder depth used for checking JavaScript files from 'node_modules'. Only applicable with 'allowJs'. */
     /* Emit */
@@ -106,7 +106,8 @@
     "./routes/**/*.ts",
     "./controllers/**/*.ts",
     "./models/**/*.ts",
-    "./utils/**/*.ts"
+    "./utils/**/*.ts",
+    "database/config/**/*.ts", "database/config/config.js",
   ],
   "exclude": [
     "node_modules",
