--- a/Servers/package.json
+++ b/Servers/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "start": "node dist/index.js",
+    "start": "npx sequelize db:migrate && node dist/index.js",
     "postbuild": "node scripts/copyFiles.js",
     "migrate-db": "DEBUG=sequelize:* npx sequelize db:migrate",
     "watch": "tsc-watch --onSuccess \"npm-run-all start\""
