added dev and prod

--- a/.env.prod
+++ b/.env.prod
@@ -1,18 +1,20 @@
+# Common Variables
 # NOTE: Please do not change the BACKEND_PORT
 BACKEND_PORT=3000
 FRONTEND_PORT=8080
-DB_HOST=localhost
-DB_USER=postgres
+
+# Database
 DB_PORT=5432
 LOCAL_DB_PORT=5433
-DB_PASSWORD=test
+DB_HOST=localhost
 DB_NAME=verifywise
 
+DB_USER=verifywise-prod
+DB_PASSWORD=verifywise
+
+# Backend Settings
 MOCK_DATA_ON=false
 JWT_SECRET=verifywise
-
-# backend app url
-# VITE_APP_API_HOST=http://localhost
 
 EMAIL_ID=your-email@gmail.com
 # Your password from: https://myaccount.google.com/apppasswords
