--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,6 @@ version: '3.9'
 services:
   postgresdb:
     image: postgres
-    env_file:
-      - ./.env
     ports:
       - $LOCAL_DB_PORT:$DB_PORT
     volumes:
@@ -16,11 +14,8 @@ services:
   backend:
     depends_on:
       - postgresdb
-    # image: pharsh4585/verifywise-backend:latest
-    # pull_policy: always
-    build: ./Servers
-    env_file:
-      - ./.env
+    image: pharsh4585/verifywise-backend:latest
+    pull_policy: always
     ports:
       - $BACKEND_PORT:$BACKEND_PORT
     environment:
@@ -37,13 +32,10 @@ services:
   frontend:
     depends_on:
       - backend
-    # image: pharsh4585/verifywise-frontend:latest
-    # pull_policy: always
-    build: ./Clients
-    env_file:
-      - ./.env
-    ports:
-      - $FRONTEND_PORT:80
+    image: pharsh4585/verifywise-frontend:latest
+    pull_policy: always
+    # ports:
+    #   - $FRONTEND_PORT:80
     # environment:
     #   # backend URL
     #   - VITE_APP_API_BASE_URL=$VITE_APP_API_HOST:$BACKEND_PORT
