--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -5,13 +5,17 @@ services:
     volumes:
       - db-prod:/var/lib/postgresql/data  # Separate volume for prod database
 
-  # backend:
+  backend:
+    env_file:
+      - ./.env.prod
   #   image: pharsh4585/verifywise-backend:latest
 
   frontend:
   #   image: pharsh4585/verifywise-frontend:latest  # Use pre-built production image
     ports:
       - $FRONTEND_PORT:80
+    env_file:
+      - ./.env.prod
 
 volumes:
   db-prod:
