--- a/.env.dev
+++ b/.env.dev
@@ -1,7 +1,8 @@
 # Common Variables
 # NOTE: Please do not change the BACKEND_PORT
 BACKEND_PORT=3000
-FRONTEND_PORT=5173
+FRONTEND_PORT=8082
+FRONTEND_URL=["http://localhost:5173", "http://localhost:8082"]
 
 # Database
 DB_PORT=5432
