--- a/Servers/package.json
+++ b/Servers/package.json
@@ -22,7 +22,9 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "helmet": "^8.0.0",
+    "html-to-docx": "^1.8.0",
     "jsonwebtoken": "^9.0.2",
+    "marked": "^15.0.11",
     "mjml": "^4.15.3",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.10.0",
