--- a/Servers/package.json
+++ b/Servers/package.json
@@ -7,7 +7,7 @@
     "build": "tsc",
     "start": "npm run migrate-db && node dist/index.js",
     "postbuild": "node scripts/copyFiles.js",
-    "migrate-db": "npx sequelize db:migrate",
+    "migrate-db": "npx sequelize db:migrate --debug",
     "watch": "tsc-watch --noClear --onSuccess \"npm-run-all postbuild start\"",
     "reset-db": "ts-node scripts/resetDatabase.ts"
   },
