--- a/.env.dev
+++ b/.env.dev
@@ -12,7 +12,7 @@ DB_HOST=localhost
 DB_NAME=verifywise
 
 DB_USER=postgres
-DB_PASSWORD=test
+DB_PASSWORD=sid@POSGRESQL2024
 
 # Backend Settings
 MOCK_DATA_ON=false
