--- a/Servers/tsconfig.json
+++ b/Servers/tsconfig.json
@@ -107,7 +107,8 @@
     "./controllers/**/*.ts",
     "./models/**/*.ts",
     "./utils/**/*.ts",
-    "./types/*.d.ts"
+    "./types/*.d.ts",
+    "./structures/**/*.ts",
   ],
   "exclude": [
     "node_modules",
