--- a/Clients/package.json
+++ b/Clients/package.json
@@ -36,6 +36,7 @@
     "axios": "^1.7.7",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.7",
+    "framer-motion": "^12.11.0",
     "libphonenumber-js": "^1.11.9",
     "material-ui-popup-state": "^5.3.1",
     "react": "^18.3.1",
