--- a/Servers/package.json
+++ b/Servers/package.json
@@ -22,6 +22,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "express-validator": "^7.2.1",
     "helmet": "^8.0.0",
     "html-to-docx": "^1.8.0",
     "jsonwebtoken": "^9.0.2",
