added code to randomly insert status

--- a/Servers/tsconfig.json
+++ b/Servers/tsconfig.json
@@ -109,6 +109,7 @@
     "./utils/**/*.ts",
     "./types/*.d.ts",
     "./structures/**/*.ts",
+    "./types/**/*.d.ts", "types/status.type.ts",
   ],
   "exclude": [
     "node_modules",
