--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,13 +1,18 @@
-name: Build and Push Docker Images
+name: Build and Push Images to GitHub Container Registry
 
 on:
   push:
     branches:
-      - master
+      # - master
+      - hp-may-16-push-images-to-ghcr
 
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
+
+    permissions:
+      contents: read
+      packages: write
 
     steps:
       - name: Checkout code
@@ -16,27 +21,21 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Debug Secret Access
+      - name: Debug GitHub Token Access
         run: |
-          if [ -z "${{ secrets.DOCKER_HUB_USERNAME }}" ]; then
-            echo "DOCKER_HUB_USERNAME is NOT set"
+          if [ -z "${{ secrets.GITHUB_TOKEN }}" ]; then
+            echo "GITHUB_TOKEN is NOT available"
             exit 1
           else
-            echo "DOCKER_HUB_USERNAME is set"
+            echo "GITHUB_TOKEN is available"
           fi
 
-          if [ -z "${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}" ]; then
-            echo "DOCKER_HUB_ACCESS_TOKEN is NOT set"
-            exit 1
-          else
-            echo "DOCKER_HUB_ACCESS_TOKEN is set"
-          fi
-
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v2
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+          registry: ghcr.io
+          username: ${{ secrets.GITHUB_ACTOR }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and push Clients image
         uses: docker/build-push-action@v4
@@ -44,7 +43,7 @@ jobs:
           context: ./Clients
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/verifywise-frontend:latest
+          tags: ghcr.io/${{ github.repository_owner }}/verifywise-frontend:test
 
       - name: Build and push Servers image
         uses: docker/build-push-action@v4
@@ -52,4 +51,4 @@ jobs:
           context: ./Servers
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/verifywise-backend:latest
+          tags: ghcr.io/${{ github.repository_owner }}/verifywise-backend:test
