Commiting all the changes from my end

--- a/.env.prod
+++ b/.env.prod
@@ -10,7 +10,7 @@ DB_HOST=localhost
 DB_NAME=verifywise
 
 DB_USER=verifywise-prod
-DB_PASSWORD=verifywise
+DB_PASSWORD=sid@POSGRESQL2024
 
 # Backend Settings
 MOCK_DATA_ON=false
