--- a/Clients/package.json
+++ b/Clients/package.json
@@ -18,6 +18,7 @@
     "@mui/lab": "^6.0.0-beta.10",
     "@mui/material": "^6.1.6",
     "@mui/styled-engine-sc": "^6.1.0",
+    "@mui/x-charts": "^8.4.0",
     "@mui/x-date-pickers": "^7.18.0",
     "@reduxjs/toolkit": "^2.2.7",
     "@svgr/rollup": "^8.1.0",
