--- a/Servers/package.json
+++ b/Servers/package.json
@@ -25,6 +25,7 @@
     "express-validator": "^7.2.1",
     "helmet": "^8.0.0",
     "html-to-docx": "^1.8.0",
+    "http-proxy-middleware": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "marked": "^15.0.11",
     "mjml": "^4.15.3",
