--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,10 +11,16 @@ services:
       - POSTGRES_USER=$DB_USER
       - POSTGRES_PASSWORD=$DB_PASSWORD
       - POSTGRES_DB=$DB_NAME
+    healthcheck:
+      test: ["CMD", "pg_isready", "-U", "$DB_USER"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
   backend:
     depends_on:
-      - postgresdb
-    image: ghcr.io/bluewave-labs/verifywise-backend:test
+      postgresdb:
+        condition: service_healthy
+    image: pharsh4585/verifywise-backend:latest
     pull_policy: always
     ports:
       - $BACKEND_PORT:$BACKEND_PORT
@@ -29,6 +35,7 @@ services:
       - JWT_SECRET=$JWT_SECRET
       - SMTP_HOST=smtp.gmail.com
       - SMTP_PORT=587
+      - FAIRNESS_AND_BIAS_URL=http://bias_and_fairness_backend:$BIAS_AND_FAIRNESS_PORT
   frontend:
     depends_on:
       - backend
@@ -39,6 +46,20 @@ services:
     # environment:
     #   # backend URL
     #   - VITE_APP_API_BASE_URL=$VITE_APP_API_HOST:$BACKEND_PORT
+  bias_and_fairness_backend:
+    depends_on:
+      - backend
+    image: pharsh4585/verifywise-bias-and-fairness-backend:latest
+    # pull_policy: always
+    ports:
+      - "${BIAS_AND_FAIRNESS_PORT}"
+    environment:
+      - DB_HOST=postgresdb
+      - DB_USER=$DB_USER
+      - DB_PORT=$DB_PORT
+      - DB_PASSWORD=$DB_PASSWORD
+      - DB_NAME=$DB_NAME
+      - BACKEND_URL=http://backend:$BACKEND_PORT
 
 volumes:
   db:
