--- a/.env.dev
+++ b/.env.dev
@@ -1,9 +1,11 @@
 # Common Variables
 # NOTE: Please do not change the BACKEND_PORT
 BACKEND_PORT=3000
+BACKEND_URL=http://localhost:3000
 FRONTEND_PORT=8082
 FRONTEND_URL=["http://localhost:5173", "http://localhost:8082"]
 VITE_APP_API_BASE_URL=http://localhost:3000
+BIAS_AND_FAIRNESS_PORT=8000
 
 # Database
 DB_PORT=5432
