--- a/BiasAndFairnessServers/Dockerfile.dev
+++ b/BiasAndFairnessServers/Dockerfile.dev
@@ -3,8 +3,11 @@ FROM python:3.9
 # Set the working directory inside the container
 WORKDIR /app
 
-COPY ./ ./
+# Copy requirements first for better caching
+COPY ./src/requirements.txt requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt
 
-RUN pip install --no-cache-dir -r ./src/requirements.txt
+# Copy the rest of the application
+COPY ./src .
 
-CMD sh -c "uvicorn src.app:app --host 0.0.0.0 --port 8000 --reload"
+CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
