--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -8,12 +8,14 @@ services:
   backend:
     env_file:
       - ./.env.prod
-  #   image: pharsh4585/verifywise-backend:latest
 
   frontend:
-  #   image: pharsh4585/verifywise-frontend:latest  # Use pre-built production image
     ports:
       - $FRONTEND_PORT:80
+    env_file:
+      - ./.env.prod
+
+  bias_and_fairness_backend:
     env_file:
       - ./.env.prod
 
