--- a/BiasAndFairnessServers/src/requirements.txt
+++ b/BiasAndFairnessServers/src/requirements.txt
@@ -1,12 +1,15 @@
 alembic==1.16.1
 annotated-types==0.7.0
 anyio==4.9.0
+async-timeout==5.0.1
+asyncpg==0.30.0
 cffi==1.17.1
 click==8.1.8
 cryptography==45.0.3
 exceptiongroup==1.3.0
 fairlearn==0.12.0
 fastapi==0.115.12
+greenlet==3.2.2
 h11==0.16.0
 idna==3.10
 joblib==1.5.1
