Fixes to ui and restored .env.dev

--- a/.env.dev
+++ b/.env.dev
@@ -12,7 +12,7 @@ LOCAL_DB_PORT=5433
 DB_HOST=localhost
 DB_NAME=verifywise
 
-DB_USER=efeacar
+DB_USER=postgres
 DB_PASSWORD=test
 
 # Backend Settings
