--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - POSTGRES_PASSWORD=$DB_PASSWORD
       - POSTGRES_DB=$DB_NAME
     healthcheck:
-      test: ["CMD", "pg_isready", "-U", "$DB_USER"]
+      test: ["CMD", "pg_isready", "-U", "$DB_USER", "-d", "$DB_NAME"]
       interval: 5s
       timeout: 5s
       retries: 5
