--- a/.env.prod
+++ b/.env.prod
@@ -1,10 +1,10 @@
 # Common Variables
 # NOTE: Please do not change the BACKEND_PORT
 BACKEND_PORT=3000
-BACKEND_URL=http://localhost:3000
+BACKEND_URL=http://localhost:3000 # localhost needs to be replaced by ip
 FRONTEND_PORT=8080
-FRONTEND_URL=http://localhost:8080
-ALLOWED_ORIGINS=["http://localhost:5173", "http://localhost:8080"]
+FRONTEND_URL=http://localhost:8080 # localhost needs to be replaced by ip
+ALLOWED_ORIGINS=["http://localhost:5173", "http://localhost:8080"] # localhost needs to be replaced by ip
 BIAS_AND_FAIRNESS_PORT=8000
 
 # Database
