--- a/Clients/package.json
+++ b/Clients/package.json
@@ -40,6 +40,7 @@
     "framer-motion": "^12.11.0",
     "libphonenumber-js": "^1.11.9",
     "material-ui-popup-state": "^5.3.1",
+    "pako": "^2.1.0",
     "react": "^18.3.1",
     "react-cookie": "^8.0.1",
     "react-dom": "^18.3.1",
@@ -55,6 +56,7 @@
     "@eslint/js": "^9.9.0",
     "@svgr/webpack": "^8.1.0",
     "@types/node": "^22.12.0",
+    "@types/pako": "^2.0.3",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@types/validator": "^13.12.2",
