--- a/.env.dev
+++ b/.env.dev
@@ -6,6 +6,7 @@ FRONTEND_PORT=8082
 FRONTEND_URL=http://localhost:8082
 ALLOWED_ORIGINS=["http://localhost:5173", "http://localhost:8082"]
 BIAS_AND_FAIRNESS_PORT=8000
+NODE_ENV=development
 
 # Database
 DB_PORT=5432
