--- a/.env.prod
+++ b/.env.prod
@@ -6,6 +6,7 @@ FRONTEND_PORT=8080
 FRONTEND_URL=http://localhost:8080 # localhost needs to be replaced by ip
 ALLOWED_ORIGINS=["http://localhost:5173", "http://localhost:8080"] # localhost needs to be replaced by ip
 BIAS_AND_FAIRNESS_PORT=8000
+NODE_ENV=production
 
 # Database
 DB_PORT=5432
