--- a/Servers/tsconfig.json
+++ b/Servers/tsconfig.json
@@ -32,7 +32,9 @@
       "node_modules/@types",
       "./types",
     ], /* Specify multiple folders that act like './node_modules/@types'. */
-    // "types": [],                                      /* Specify type package names to be included without being referenced in a source file. */
+    "types": [
+      "jest"
+    ], /* Specify type package names to be included without being referenced in a source file. */
     // "allowUmdGlobalAccess": true,                     /* Allow accessing UMD globals from modules. */
     // "moduleSuffixes": [],                             /* List of file name suffixes to search when resolving a module. */
     // "allowImportingTsExtensions": true,               /* Allow imports to include TypeScript file extensions. Requires '--moduleResolution bundler' and either '--noEmit' or '--emitDeclarationOnly' to be set. */
@@ -113,6 +115,8 @@
     "./types/**/*.d.ts",
     "types/status.type.ts",
     "domain.layer/models/user/user.model.ts",
+    "domain.layer/tests/**/*.ts",
+    "domain.layer/**/*.ts"
   ],
   "exclude": [
     "node_modules",
