--- a/Servers/package.json
+++ b/Servers/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
-    "test:watch": "jest --watch",
+    "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
     "start": "npm run migrate-db && node dist/index.js",
     "postbuild": "node scripts/copyFiles.js",
@@ -46,7 +45,6 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/helmet": "^4.0.0",
-    "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/mjml": "^4.7.4",
     "@types/node": "^22.7.5",
@@ -54,13 +52,11 @@
     "@types/pg": "^8.11.10",
     "@types/swagger-ui-express": "^4.1.6",
     "@types/yamljs": "^0.2.34",
-    "jest": "^30.0.2",
     "nodemon": "^3.1.7",
     "npm-run-all": "^4.1.5",
     "sequelize-cli": "^6.6.2",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
-    "ts-jest": "^29.4.0",
     "ts-node": "^10.9.2",
     "tsc-watch": "^6.2.0"
   }
