--- a/Servers/package.json
+++ b/Servers/package.json
@@ -21,6 +21,7 @@
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "express-validator": "^7.2.1",
@@ -49,7 +50,7 @@
     "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/mjml": "^4.7.4",
-    "@types/node": "^22.7.5",
+    "@types/node": "^22.15.33",
     "@types/nodemailer": "^6.4.17",
     "@types/pg": "^8.11.10",
     "@types/swagger-ui-express": "^4.1.6",
