--- a/BiasAndFairnessModule/pyproject.toml
+++ b/BiasAndFairnessModule/pyproject.toml
@@ -7,3 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "rust>=1.3.1",
 ]
+
+[build-system]
+requires = ["setuptools>=69", "wheel"]
+build-backend = "setuptools.build_meta"
