--- a/BiasAndFairnessModule/pyproject.toml
+++ b/BiasAndFairnessModule/pyproject.toml
@@ -5,7 +5,11 @@ description = "Experimental module for evaluating bias and fairness in Large Lan
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "rust>=1.3.1",
+    "black>=25.1.0",
+    "flake8>=7.3.0",
+    "isort>=6.0.1",
+    "mypy>=1.16.1",
+    "pylint>=3.3.7",
 ]
 
 [build-system]
