--- a/Clients/package.json
+++ b/Clients/package.json
@@ -39,6 +39,7 @@
     "dotenv": "^16.4.7",
     "framer-motion": "^12.11.0",
     "libphonenumber-js": "^1.11.9",
+    "lingo.dev": "^0.104.0",
     "material-ui-popup-state": "^5.3.1",
     "pako": "^2.1.0",
     "react": "^18.3.1",
