--- a/BiasAndFairnessModule/configs/config.yaml
+++ b/BiasAndFairnessModule/configs/config.yaml
@@ -2,6 +2,7 @@
 dataset:
   name: "adult-census-income"
   source: "scikit-learn/adult-census-income"
+  split: "train"
   platform: "huggingface"
   protected_attributes:
     - "sex"
