--- a/.env.dev
+++ b/.env.dev
@@ -8,6 +8,8 @@ ALLOWED_ORIGINS=["http://localhost:5173", "http://localhost:8082"]
 BIAS_AND_FAIRNESS_PORT=8000
 NODE_ENV=development
 
+RESEND_API_KEY=your-resend-api-key
+
 # Database
 DB_PORT=5432
 LOCAL_DB_PORT=5433
