--- a/.env.prod
+++ b/.env.prod
@@ -10,6 +10,8 @@ NODE_ENV=production
 # NOTE: Please do not change this unless the database is hosted on a different server and you want to use SSL for the connection
 DB_SSL=false
 
+RESEND_API_KEY=your-resend-api-key
+
 # Database
 DB_PORT=5432
 LOCAL_DB_PORT=5433
