--- a/BiasAndFairnessModule/configs/config.yaml
+++ b/BiasAndFairnessModule/configs/config.yaml
@@ -15,12 +15,14 @@ dataset:
 
 # Model Configuration
 model:  
-  # Closed source model configuration (for API-based models)
-  closed_source:
-    enabled: false
-    api_endpoint: null
-    api_key_env_var: "MODEL_API_KEY"
-    timeout_seconds: 15
+  # Hugging Face model configuration
+  huggingface:
+    enabled: true
+    model_id: "TinyLlama/TinyLlama-1.1B-Chat-v1.0"
+    device: "cuda"  # or "cpu" for CPU-only inference
+    max_length: 512
+    temperature: 0.7
+    top_p: 0.9
 
 # Metrics Configuration
 metrics:
