--- a/BiasAndFairnessModule/pyproject.toml
+++ b/BiasAndFairnessModule/pyproject.toml
@@ -5,7 +5,9 @@ description = "Experimental module for evaluating bias and fairness in Large Lan
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "aif360>=0.6.1",
     "black>=25.1.0",
+    "fairlearn>=0.12.0",
     "flake8>=7.3.0",
     "isort>=6.0.1",
     "mypy>=1.16.1",
