--- a/Clients/package.json
+++ b/Clients/package.json
@@ -19,11 +19,14 @@
     "@mui/material": "^6.1.6",
     "@mui/styled-engine-sc": "^6.1.0",
     "@mui/x-charts": "^8.4.0",
-    "@mui/x-date-pickers": "^7.18.0",
+    "@mui/x-date-pickers": "^7.29.4",
+    "@platejs/basic-nodes": "^49.0.0",
     "@reduxjs/toolkit": "^2.2.7",
     "@svgr/rollup": "^8.1.0",
     "@tiptap/react": "^2.8.0",
     "@tiptap/starter-kit": "^2.8.0",
+    "@udecode/plate": "^48.0.5",
+    "@udecode/plate-serializer-html": "^21.5.1",
     "@uppy/core": "^4.2.3",
     "@uppy/dashboard": "^4.1.2",
     "@uppy/drag-drop": "^4.0.4",
@@ -41,6 +44,7 @@
     "libphonenumber-js": "^1.11.9",
     "material-ui-popup-state": "^5.3.1",
     "pako": "^2.1.0",
+    "platejs": "^49.1.13",
     "react": "^18.3.1",
     "react-cookie": "^8.0.1",
     "react-dom": "^18.3.1",
