--- a/Clients/package.json
+++ b/Clients/package.json
@@ -27,6 +27,7 @@
     "@tiptap/starter-kit": "^2.8.0",
     "@udecode/plate": "^48.0.5",
     "@udecode/plate-serializer-html": "^21.5.1",
+    "@udecode/zustood": "2.0.0",
     "@uppy/core": "^4.2.3",
     "@uppy/dashboard": "^4.1.2",
     "@uppy/drag-drop": "^4.0.4",
@@ -54,7 +55,8 @@
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "styled-components": "^6.1.13",
-    "validator": "^13.12.0"
+    "validator": "^13.12.0",
+    "zustand": "4.5.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
