Enhance Makefile to support file-specific formatting and linting commands

--- a/BiasAndFairnessModule/Makefile
+++ b/BiasAndFairnessModule/Makefile
@@ -1,10 +1,21 @@
 format:
+ifdef FILE
+	black $(FILE)
+	isort $(FILE)
+else
 	black . --exclude '(\.venv|venv)'
 	isort . --skip .venv
+endif
 
 lint:
+ifdef FILE
+	flake8 $(FILE)
+	mypy $(FILE)
+	pylint $(FILE)
+else
 	flake8 . --exclude=.venv
 	mypy . --exclude .venv
 	pylint $(shell find . -type f -name "*.py" ! -path "./.venv/*")
+endif
 
 check: format lint
