Add artifacts configuration to YAML and implement saving of inference results in the inference pipeline

--- a/BiasAndFairnessModule/configs/config.yaml
+++ b/BiasAndFairnessModule/configs/config.yaml
@@ -56,3 +56,6 @@ metrics:
       - "accuracy"
       - "precision"
 
+artifacts:
+  inference_results_path: "artifacts/inference_results.csv"
+  postprocessed_results_path: "artifacts/postprocessed_results.csv"
