--- a/BiasAndFairnessModule/pyproject.toml
+++ b/BiasAndFairnessModule/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "isort>=6.0.1",
     "mypy>=1.16.1",
     "pylint>=3.3.7",
+    "pytest>=8.4.1",
     "types-pyyaml>=6.0.12.20250516",
 ]
 
