Add test command to Makefile to run pytest while ignoring specific test file

--- a/BiasAndFairnessModule/Makefile
+++ b/BiasAndFairnessModule/Makefile
@@ -18,4 +18,7 @@ else
 	pylint $(shell find . -type f -name "*.py" ! -path "./.venv/*")
 endif
 
+test:
+	pytest tests --ignore=tests/base_test_metrics.py
+
 check: format lint
